--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
         "@brightlayer-ui/react-native-themes": "^6.0.0",
         "@brightlayer-ui/react-native-vector-icons": "^2.0.0-beta.0",
         "@react-native-masked-view/masked-view": "^0.2.7",
-        "@react-navigation/drawer": "^5.8.1",
-        "@react-navigation/native": "^5.5.0",
-        "@react-navigation/stack": "^5.4.1",
+        "@react-navigation/bottom-tabs": "^6.4.0",
+        "@react-navigation/drawer": "^6.5.0",
+        "@react-navigation/elements": "^1.3.6",
+        "@react-navigation/material-bottom-tabs": "^6.2.4",
+        "@react-navigation/material-top-tabs": "^6.3.0",
+        "@react-navigation/native": "^6.0.13",
+        "@react-navigation/native-stack": "^6.9.1",
+        "@react-navigation/stack": "^6.3.4",
         "color": "^4.2.3",
         "lodash.clonedeep": "^4.5.0",
         "react": "18.1.0",
@@ -34,12 +39,14 @@
         "react-native-collapsible": "^1.6.0",
         "react-native-gesture-handler": "^2.6.2",
         "react-native-modal": "^13.0.1",
-        "react-native-paper": "^4.12.4",
-        "react-native-reanimated": "^2.10.0",
+        "react-native-pager-view": "^6.1.0",
+        "react-native-paper": "^4.12.5",
+        "react-native-reanimated": "^2.13.0",
         "react-native-restart": "^0.0.24",
-        "react-native-safe-area-context": "^3.0.0",
-        "react-native-screens": "^3.17.0",
+        "react-native-safe-area-context": "^4.4.1",
+        "react-native-screens": "^3.18.2",
         "react-native-svg": "^12.1.0",
+        "react-native-tab-view": "^3.3.0",
         "react-native-vector-icons": "^9.2.0"
     },
     "devDependencies": {
